@@ -1,4 +1,4 @@
-package org.schabi.newpipe.player.event;
+package org.schabi.newpipe.player.gesture;
 
 import android.content.Context;
 import android.graphics.Rect;
@@ -8,24 +8,25 @@ import android.view.View;
 import android.widget.FrameLayout;
 
 import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import androidx.coordinatorlayout.widget.CoordinatorLayout;
 
 import com.google.android.material.bottomsheet.BottomSheetBehavior;
 
 import org.schabi.newpipe.R;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class CustomBottomSheetBehavior extends BottomSheetBehavior<FrameLayout> {
 
-    public CustomBottomSheetBehavior(final Context context, final AttributeSet attrs) {
+    public CustomBottomSheetBehavior(@NonNull final Context context,
+                                     @Nullable final AttributeSet attrs) {
         super(context, attrs);
     }
 
     Rect globalRect = new Rect();
     private boolean skippingInterception = false;
-    private final List<Integer> skipInterceptionOfElements = Arrays.asList(
+    private final List<Integer> skipInterceptionOfElements = List.of(
             R.id.detail_content_root_layout, R.id.relatedItemsLayout,
             R.id.itemsListPanel, R.id.view_pager, R.id.tab_layout, R.id.bottomControls,
             R.id.playPauseButton, R.id.playPreviousButton, R.id.playNextButton);
@@ -33,7 +34,7 @@ public class CustomBottomSheetBehavior extends BottomSheetBehavior<FrameLayout> 
     @Override
     public boolean onInterceptTouchEvent(@NonNull final CoordinatorLayout parent,
                                          @NonNull final FrameLayout child,
-                                         final MotionEvent event) {
+                                         @NonNull final MotionEvent event) {
         // Drop following when action ends
         if (event.getAction() == MotionEvent.ACTION_CANCEL
                 || event.getAction() == MotionEvent.ACTION_UP) {
@@ -57,7 +58,7 @@ public class CustomBottomSheetBehavior extends BottomSheetBehavior<FrameLayout> 
         if (getState() == BottomSheetBehavior.STATE_EXPANDED
                 && event.getAction() == MotionEvent.ACTION_DOWN) {
             // Without overriding scrolling will not work when user touches these elements
-            for (final Integer element : skipInterceptionOfElements) {
+            for (final int element : skipInterceptionOfElements) {
                 final View view = child.findViewById(element);
                 if (view != null) {
                     final boolean visible = view.getGlobalVisibleRect(globalRect);
